<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <TextView
        android:id="@+id/textViewTitulo"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/salonHabana"
        android:textSize="32sp"
        android:fontFamily="cursive"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <TextView
        android:id="@+id/textViewDias"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/dias"
        android:tooltipText="Dias aqui"
        android:textSize="24sp"
        android:fontFamily="sans-serif-condensed-light"
        app:layout_constraintEnd_toEndOf="@+id/textViewTitulo"
        app:layout_constraintStart_toStartOf="@+id/textViewTitulo"
        app:layout_constraintTop_toBottomOf="@+id/textViewTitulo" />

    <TextView
        android:id="@+id/textViewHabitaciones"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="96dp"
        android:text="@string/habitaciones"
        android:tooltipText="Habitaciones aqui"
        android:textSize="24sp"
        android:fontFamily="sans-serif-condensed-light"
        app:layout_constraintEnd_toEndOf="@+id/textViewTitulo"
        app:layout_constraintStart_toStartOf="@+id/textViewTitulo"
        app:layout_constraintTop_toTopOf="@+id/textViewDias" />

    <SeekBar
        android:id="@+id/seekBar2"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/textViewDias"
        app:layout_constraintStart_toStartOf="@+id/textViewDias"
        app:layout_constraintTop_toBottomOf="@+id/textViewDias" />

    <SeekBar
        android:id="@+id/seekBar3"
        android:layout_width="300dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        app:layout_constraintEnd_toEndOf="@+id/textViewHabitaciones"
        app:layout_constraintStart_toStartOf="@+id/textViewHabitaciones"
        app:layout_constraintTop_toBottomOf="@+id/textViewHabitaciones" />

    <TextView
        android:id="@+id/textViewSeekBarDiasMin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="1"
        app:layout_constraintEnd_toStartOf="@+id/seekBar2"
        app:layout_constraintStart_toStartOf="@+id/seekBar2"
        app:layout_constraintTop_toBottomOf="@+id/seekBar2" />

    <TextView
        android:id="@+id/textViewSeekBarHabitacionesMin"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="1"
        app:layout_constraintEnd_toStartOf="@+id/seekBar3"
        app:layout_constraintStart_toStartOf="@+id/seekBar3"
        app:layout_constraintTop_toBottomOf="@+id/seekBar3" />

    <TextView
        android:id="@+id/textViewSeekBarDiasMax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="7"
        app:layout_constraintEnd_toEndOf="@+id/seekBar2"
        app:layout_constraintStart_toEndOf="@+id/seekBar2"
        app:layout_constraintTop_toBottomOf="@+id/seekBar2" />

    <TextView
        android:id="@+id/textViewSeekBarHabitacionesMax"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="10"
        app:layout_constraintEnd_toEndOf="@+id/seekBar3"
        app:layout_constraintStart_toEndOf="@+id/seekBar3"
        app:layout_constraintTop_toBottomOf="@+id/seekBar3" />

    <Button
        android:id="@+id/button2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="32dp"
        android:text="@string/siguiente"
        app:layout_constraintEnd_toEndOf="@+id/seekBar3"
        app:layout_constraintStart_toStartOf="@+id/seekBar3"
        app:layout_constraintTop_toBottomOf="@+id/seekBar3" />

</androidx.constraintlayout.widget.ConstraintLayout>